# Invoice-Book

./: .env  .env.sample  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
back-end/: .gitignore  package-lock.json  package.json  server.js
invoice-book(front-end)/: package-lock.json  package.json  vite.config.js
invoice-book(front-end)/src/: App.jsx  home.css  home.jsx
invoice-book(front-end)/src-tauri/: tauri.conf.json
invoice-book(front-end)/src/DataModels/: DataModels.js
invoice-book(front-end)/src/template/: template.js
src/: .env  App.jsx  App.tsx  Home.tsx  home.css  home.jsx  index.css  main.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/handlers/: mod.rs
src/Components/: DialogBox.tsx  Invoice.css  Invoice.jsx  SidebarDemo.tsx  SidebarLayout.tsx  sideBar.css  sideBar.jsx
src/Components/AddCustomers/: AddCustomer.jsx  AddCustomer.tsx
src/Components/AddItems/: AddItem.jsx  AddItem.tsx
src/Components/Dialogbox/: DialogBox.tsx
src/Components/generateInvoice/: Invoice.css  Invoice.jsx
src/Components/pdfGeneratore/: pdfGeneratore.jsx  pdfGeneratore.tsx
src/Components/settings/: settings.css  settings.jsx
src/DataModels/: DataModels.ts
src/Store/: Store.ts
src/components/: DialogBox.tsx  SidebarLayout.tsx
src/pages/: DashBoard.tsx  Data_provider.tsx  InvoiceGenerator.tsx  Payment.tsx  ViewInvoice.tsx
src/utils/: common_Methods.ts  indexedDB.ts
(+54 files in other folders)
