[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies.tauri]
version = "1.3" 
features = ["custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
rusqlite = { version = "0.26", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
