[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies.tauri]
version = "2.0.0-rc"
features = ["custom-protocol"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
rusqlite = { version = "0.26", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
